--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "scripts": {
     "build": "tsc",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "prepublishOnly": "npm run build"
   },
   "keywords": ["mcp", "amqp", "transport", "model-context-protocol"],
@@ -24,7 +27,10 @@
   },
   "devDependencies": {
     "@types/amqplib": "^0.10.7",
+    "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.0"
   }
 }
