--- a/package.json
+++ b/package.json
@@ -13,12 +13,29 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "lint": "eslint src tests --ext .ts",
+    "lint:fix": "eslint src tests --ext .ts --fix",
+    "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\" \"tests/**/*.ts\"",
+    "type-check": "tsc --noEmit",
+    "prepare": "husky install",
     "prepublishOnly": "npm run build"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   },
   "engines": {
     "node": ">=18.0.0"
   },
-  "keywords": ["mcp", "amqp", "transport", "model-context-protocol"],
+  "keywords": [
+    "mcp",
+    "amqp",
+    "transport",
+    "model-context-protocol"
+  ],
   "author": "",
   "license": "Apache-2.0",
   "repository": {
@@ -36,7 +53,14 @@
     "@types/amqplib": "^0.10.7",
     "@types/jest": "^29.5.0",
     "@types/node": "^20.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.2",
+    "husky": "^8.0.3",
     "jest": "^29.5.0",
+    "lint-staged": "^15.5.2",
+    "prettier": "^3.6.2",
     "ts-jest": "^29.1.0",
     "typescript": "^5.0.0"
   }
